--- a/in-app-tasks.html
+++ b/in-app-tasks.html
@@ -139,157 +139,159 @@
     <!-- In App Body -->
     <section class="container-fluid">
 
-          <div id="datasessions" class="tab-pane active">
-            <div class="clearfix">
-              <form action="" class="float-none form-inline">
-                <p class="mr-auto mb-0">1 result(s).</p>
-                <div class="inner-side-search">
-                  <div class="input-group">
-                    <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
-                    <div class="input-group-append">
-                      <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+          <div class="row">
+            <div class="col-12 col-md-11">
+              <div class="clearfix">
+                <form action="" class="float-none form-inline mt-5">
+                  <p class="mr-auto mb-0">1 result(s).</p>
+                  <div class="inner-side-search">
+                    <div class="input-group">
+                      <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
+                      <div class="input-group-append">
+                        <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="dropdown">
-                  <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
-                  <div class="dropdown-menu font-size-14">
-                    <a class="dropdown-item" href="#">Newest</a>
-                    <a class="dropdown-item" href="#">Oldest</a>
-                    <a class="dropdown-item" href="#">Most Popular</a>
-                    <a class="dropdown-item" href="#">Less Popular</a>
+                  <div class="dropdown">
+                    <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
+                    <div class="dropdown-menu font-size-14">
+                      <a class="dropdown-item" href="#">Newest</a>
+                      <a class="dropdown-item" href="#">Oldest</a>
+                      <a class="dropdown-item" href="#">Most Popular</a>
+                      <a class="dropdown-item" href="#">Less Popular</a>
+                    </div>
                   </div>
-                </div>
-              </form>
-            </div>
-            <div class="table-responsive mt-2">
-              <table class="table table-bordered font-size-14 text-center bg-white">
-                <thead>
-                <tr class="bg-light text-dark font-size-12">
-                  <th scope="col">Extractor</th>
-                  <th scope="col">Scheduler</th>
-                  <th scope="col">Next run</th>
-                  <th scope="col">Total run</th>
-                  <th scope="col">Last run status</th>
-                  <th scope="col">Last run duration</th>
-                  <th scope="col" class="text-left">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-danger"><i class="fas fa-times-circle mr-1" aria-hidden="true"></i>Failed</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>amazon.com - 45</td>
-                  <td>Every 6 months</td>
-                  <td>124 days, 22:23:01</td>
-                  <td>7 times</td>
-                  <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
-                  <td>2hours</td>
-                  <td class="text-left">
-                    <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="mt-3 wauto-pagination">
-                <ul class="pagination pagination-sm justify-content-center">
-                    <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">«</span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item active" aria-current="page">
-                    <a class="page-link" href="#">2</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item">
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">»</span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    </li>
-                </ul>
+                </form>
+              </div>
+              <div class="table-responsive mt-2">
+                <table class="table table-bordered font-size-14 text-center bg-white">
+                  <thead>
+                  <tr class="bg-light text-dark font-size-12">
+                    <th scope="col">Extractor</th>
+                    <th scope="col">Scheduler</th>
+                    <th scope="col">Next run</th>
+                    <th scope="col">Total run</th>
+                    <th scope="col">Last run status</th>
+                    <th scope="col">Last run duration</th>
+                    <th scope="col" class="text-left">Actions</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-danger"><i class="fas fa-times-circle mr-1" aria-hidden="true"></i>Failed</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>amazon.com - 45</td>
+                    <td>Every 6 months</td>
+                    <td>124 days, 22:23:01</td>
+                    <td>7 times</td>
+                    <td><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td>2hours</td>
+                    <td class="text-left">
+                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+              <div class="mt-3 wauto-pagination">
+                  <ul class="pagination pagination-sm justify-content-center">
+                      <li class="page-item disabled">
+                      <a class="page-link" href="#" aria-label="Previous">
+                          <span aria-hidden="true">«</span>
+                          <span class="sr-only">Previous</span>
+                      </a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">1</a></li>
+                      <li class="page-item active" aria-current="page">
+                      <a class="page-link" href="#">2</a>
+                      </li>
+                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item">
+                      <a class="page-link" href="#" aria-label="Next">
+                          <span aria-hidden="true">»</span>
+                          <span class="sr-only">Next</span>
+                      </a>
+                      </li>
+                  </ul>
+              </div>
             </div>
           </div>
 
