--- a/get-help.html
+++ b/get-help.html
@@ -59,15 +59,15 @@
           </div>
 
             <div class="row justify-content-center mb-3 mt-3 text-center">
-                <div class="col-md-10">
-                    <h2>Get Help</h2>
+                <div class="col-md-11">
+                    <h3 class="mb-4 mt-4">Get more help</h3 >
                     <div class="row same-height text-center">
                         <div class="col-md-3 mb-3">
                           <div class="card card-pde border-0 shadow-sm">
                             <div class="card-body">
                                 <div class="d-flex h-100 flex-column align-items-center justify-content-around">
-                                    <i class="material-icons">chat</i>
-                                    <p class="card-text font-weight-bold">Chat with us</p>
+                                  <img src="./img/question_answer_black_24dp.svg" alt="">
+                                  <p class="card-text mt-2 font-weight-bold">Chat with us</p>
                                 </div>
                             </div>
                           </div>
@@ -76,8 +76,8 @@
                            <div class="card card-pde border-0 shadow-sm">
                              <div class="card-body">
                                 <div class="d-flex h-100 flex-column align-items-center justify-content-around">
-                                    <i class="material-icons">build</i>
-                                    <p class="card-text font-weight-bold">Let's build a new extractor for you</p>
+                                  <img src="./img/build_circle_black_24dp.svg" alt="">
+                                  <p class="card-text mt-2 font-weight-bold">Let's build a new extractor for you</p>
                                 </div>
                              </div>
                            </div>
@@ -86,8 +86,8 @@
                            <div class="card card-pde border-0 shadow-sm">
                              <div class="card-body">
                                 <div class="d-flex h-100 flex-column align-items-center justify-content-around">
-                                    <i class="material-icons">subject</i>
-                                    <p class="card-text font-weight-bold">Help articles</p>
+                                  <img src="./img/article_black_24dp.svg" alt="">
+                                  <p class="card-text mt-2 font-weight-bold">Help articles</p>
                                 </div>
                              </div>
                            </div>
@@ -96,8 +96,8 @@
                            <div class="card card-pde border-0 shadow-sm">
                              <div class="card-body">
                                 <div class="d-flex h-100 flex-column align-items-center justify-content-around">
-                                    <img src="./img/icon-dash-play.svg" alt="">
-                                    <p class="card-text font-weight-bold">Video Tutorials</p>
+                                  <img src="./img/play_circle_filled_black_24dp(1).svg" alt="">
+                                  <p class="card-text mt-2 font-weight-bold">Video Tutorials</p>
                                 </div>
                             </div>
                            </div>
