--- a/thank-you-page.html
+++ b/thank-you-page.html
@@ -30,49 +30,49 @@
 
 <body class="bg-onboarding">
   <!-- Onboarding - Login -->
-  <section class="container-fluid section-onboarding">
+  <section class="container-fluid">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-10">
 
-          <div class="row d-flex justify-content-center">
-            <div class="col-md-5 mb-3">
-              <div class="card card-pde border-0 shadow-sm">
+          <div class="row d-flex mt-5 justify-content-center">
+            <div class="col-md-6 mb-3">
+              <div class="card card-pde border mt-3 shadow-sm">
                 <div class="card-body p-0">
                     <div class="d-flex h-100 flex-column justify-content-around">
                         <div class="bg-blue text-center">
-                            <div class="w-75 m-auto pt-3 pb-3">
+                            <div class="m-auto p-4">
                                 <h4 class="font-weight-bold color-orange">Thanks, Victor</h4>
                                 <p class="mb-0">When you are charged, we'll send your receipt to info@webautomation.io. You can view your receipt or forward it to another address from billing history.</p>
-                                <a href="" class="btn btn-outline-secondary d-inline-block font-size-14 mb-3 mt-3">Cancel</a>
+                                <a href="" class="btn btn-outline-secondary d-inline-block font-size-14 mt-3">Close</a>
                             </div>
                         </div>
                         <div class="ml-3 mr-3 mt-3">
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <p>Starter plan</p>
-                                    <p>100,000 Credits</p>
+                                    <p class="mb-1 font-weight-bold font-size-14">Starter plan</p>
+                                    <p class="font-size-12">100,000 Credits</p>
                                 </div>
                                 <div>
-                                    <p>$29.00</p>
+                                    <p class="font-weight-bold">$29.00</p>
                                 </div>
                             </div>
                             <div class="d-flex justify-content-between">
                                 <div>
-                                    <p>Starter plan</p>
-                                    <p>100,000 Credits</p>
+                                    <p class="mb-1 font-weight-bold font-size-14">Current plan (starter plan)</p>
+                                    <p class="font-size-12">100,000 Credits</p>
                                 </div>
                                 <div>
-                                    <p>$29.00</p>
+                                    <p class="font-weight-bold">$29.00</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="d-flex border-top justify-content-between pl-3 pr-3 pt-2">
+                        <div class="d-flex border-top justify-content-between pl-3 pr-3 pt-2 pb-2">
                             <div>
-                                <i class="material-icons">credit_card</i><p class="d-inline">Starter plan</p>
+                                <i class="material-icons mr-1">credit_card</i><p class="d-inline font-size-12">Paid with Mastercard ending in 2365</p>
                             </div>
                             <div>
-                                <p>$29.00</p>
+                                <p class="d-inline font-size-12">$29.00</p>
                             </div>
                         </div>
 
