--- a/in-app-extractors-empty.html
+++ b/in-app-extractors-empty.html
@@ -140,7 +140,7 @@
     <!-- In App Body -->
     <div class="inner-sidebar">
       <div class="inner-side-head text-center">
-        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new"><i class="material-icons-round mr-1">add</i>New Extractor</button>
+        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new btn-blue-gradient"><i class="material-icons-round mr-1">add</i>New Extractor</button>
       </div>
       <div class="inner-side-search">
         <div class="input-group">
@@ -179,7 +179,7 @@
           <div class="body-content-empty text-center">
             <img src="img/img-inapp-start-empty.png" alt="">
             <p class="mt-3 font-size-16 font-weight-bold">Create a project to group your extractors in a single view</p>
-            <a href="#" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new"><i class="material-icons-round mr-1">add</i>Create Extractor</a>
+            <a href="#" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new btn-blue-gradient"><i class="material-icons-round mr-1">add</i>Create Extractor</a>
           </div>
         </div>
       </div>
