--- a/introduction.html
+++ b/introduction.html
@@ -33,27 +33,27 @@
   <section class="container-fluid mt-5">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-10">
+        <div class="col-12 col-md-12">
           
           <div class="tabs-extractor mt-4 wizard-nav">
             <ul class="nav nav-tabs justify-content-center">
               <li class="nav-item">
-                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
+                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
               </li>
             </ul>
           </div>
@@ -86,8 +86,15 @@
 
     </div>
   </section>
+  <script src="js/confetti.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    startConfetti();
+    setTimeout(function() {
+      stopConfetti();
+    }, 3000);
+  </script>
 </body>
 
 </html>
