--- a/select-PDE.html
+++ b/select-PDE.html
@@ -33,27 +33,27 @@
   <section class="container-fluid mt-5">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-10">
+        <div class="col-12 col-md-12">
           
           <div class="tabs-extractor mt-4 wizard-nav">
             <ul class="nav nav-tabs justify-content-center">
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
+                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
               </li>
               <li class="nav-item">
-                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
+                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-2 mr-2" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
+                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
               </li>
             </ul>
           </div>
@@ -61,8 +61,8 @@
             <div class="row justify-content-center mb-3 mt-3">
                 <div class="col-md-12">
                     
-                    <section class="container-fluid pde-categories pt-3">
-                        <div class="container">
+                    <section class="container-fluid pde-categories p-0 pt-3">
+                        <div class="container p-0">
                           <h2 class="color-blue mb-4 text-center">Choose a Pre-Defined Extractor to get started</h2>
                           <div class="input-group pde-search mb-5">
                             <input type="text" class="form-control pde-search-input pl-4 border-right-0" placeholder="Search Keywords" id="pdesearch" name="pdesearch">
@@ -342,68 +342,6 @@
                                 <div class="card card-pde border-0 shadow-sm">
                                   <div class="card-body">
                                     <img src="img/logo-google.png" alt="" class="img-fluid mb-3">
-                                    <p class="card-title">Airbnb Date availability and Price Scraper</p>
-                                    <p class="card-text">Extract price and date availability data for property listing on Airbnb. You can scrape all home listings.</p>
-                                    <ul class="list-inline mt-5">
-                                      <li class="list-inline-item mr-1"><img src="img/logo-wauto-icon.png" alt=""></li>
-                                      <li class="list-inline-item wauto-brand-text">Webautomation</li>
-                                    </ul>
-                                    <div class="row">
-                                      <div class="col-6"><img src="img/icon-review.png" alt=""></div>
-                                      <div class="col-6 text-right">
-                                        <ul class="list-inline">
-                                          <li class="list-inline-item mr-1"><i class="fas fa-user-friends color-orange"></i></li>
-                                          <li class="list-inline-item card-pde-users color-orange">16.993</li>
-                                        </ul>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                              </div>
-                              <div class="card-deck mt-4">
-                                <div class="card card-pde border-0 shadow-sm">
-                                  <div class="card-body">
-                                    <img src="img/Logo-rightmove.png" alt="" class="img-fluid mb-3">
-                                    <p class="card-title">Airbnb Date availability and Price Scraper</p>
-                                    <p class="card-text">Extract price and date availability data for property listing on Airbnb. You can scrape all home listings.</p>
-                                    <ul class="list-inline mt-5">
-                                      <li class="list-inline-item mr-1"><img src="img/logo-wauto-icon.png" alt=""></li>
-                                      <li class="list-inline-item wauto-brand-text">Webautomation</li>
-                                    </ul>
-                                    <div class="row">
-                                      <div class="col-6"><img src="img/icon-review.png" alt=""></div>
-                                      <div class="col-6 text-right">
-                                        <ul class="list-inline">
-                                          <li class="list-inline-item mr-1"><i class="fas fa-user-friends color-orange"></i></li>
-                                          <li class="list-inline-item card-pde-users color-orange">16.993</li>
-                                        </ul>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="card card-pde border-0 shadow-sm">
-                                  <div class="card-body">
-                                    <img src="img/Logo-redit.png" alt="" class="img-fluid mb-3">
-                                    <p class="card-title">Airbnb Date availability and Price Scraper</p>
-                                    <p class="card-text">Extract price and date availability data for property listing on Airbnb. You can scrape all home listings.</p>
-                                    <ul class="list-inline mt-5">
-                                      <li class="list-inline-item mr-1"><img src="img/logo-wauto-icon.png" alt=""></li>
-                                      <li class="list-inline-item wauto-brand-text">Webautomation</li>
-                                    </ul>
-                                    <div class="row">
-                                      <div class="col-6"><img src="img/icon-review.png" alt=""></div>
-                                      <div class="col-6 text-right">
-                                        <ul class="list-inline">
-                                          <li class="list-inline-item mr-1"><i class="fas fa-user-friends color-orange"></i></li>
-                                          <li class="list-inline-item card-pde-users color-orange">16.993</li>
-                                        </ul>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="card card-pde border-0 shadow-sm">
-                                  <div class="card-body">
-                                    <img src="img/Logo-aliexpress.png" alt="" class="img-fluid mb-3">
                                     <p class="card-title">Airbnb Date availability and Price Scraper</p>
                                     <p class="card-text">Extract price and date availability data for property listing on Airbnb. You can scrape all home listings.</p>
                                     <ul class="list-inline mt-5">
