--- a/in-app-projects-list.html
+++ b/in-app-projects-list.html
@@ -140,11 +140,11 @@
     <!-- In App Body -->
     <div class="inner-sidebar">
       <div class="inner-side-head text-center">
-        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new"><i class="material-icons-round mr-1">add</i>New Extractor</button>
+        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new"><i class="material-icons-round mr-1">add</i>New Project</button>
       </div>
       <div class="inner-side-search">
         <div class="input-group">
-          <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
+          <input type="text" class="form-control border-right-0 border" placeholder="search extractors" id="pdesearch" name="pdesearch">
           <div class="input-group-append">
             <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
           </div>
