--- a/update-your-plan.html
+++ b/update-your-plan.html
@@ -30,14 +30,14 @@
 
 <body class="bg-onboarding">
   <!-- Onboarding - Login -->
-  <section class="container-fluid section-onboarding">
+  <section class="container-fluid">
     <div class="container">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center mt-4">
         <div class="col-12 col-md-10">
-          <h1 class="color-orange text-center mb-5">Update your plan</h1>
+          <h3 class="color-orange font-weight-bold text-center mb-5">Update your plan</h3>
 
           <div class="d-flex">
-            <h4>Prices and Plans</h4>
+            <h4 class="font-weight-bold">Prices and Plans</h4>
             <div class="custom-control custom-switch">
                 <label class="mr-4 color-blue" for="customSwitch1">Monthly</label>
                 <input type="checkbox" checked="" class="custom-control-input position-relative" id="customSwitch1">
@@ -144,7 +144,7 @@
           </div>
 
 
-          <h4 class="mb-2 mt-4">ADD-ONS</h4>
+          <h4 class="mb-2 mt-4 font-weight-bold">ADD-ONS</h4>
           <div class="row same-height text-center">
             <div class="col-md-6 mb-3">
                 <div class="card card-pde border-orange shadow-sm">
