--- a/in-app-activate-extractor.html
+++ b/in-app-activate-extractor.html
@@ -34,6 +34,7 @@
   <div class="sidebar-wrapper" id="sidebar">
     <div class="mt-3 pl-4 overflow-hidden">
       <a class="navbar-brand" href="#"><img src="img/logo-wauto-inapp.png" alt=""></a>
+      <a href="#" id="close-sidebar" class="close-sidemenu ml-2"><i class="material-icons-round mr-1">close</i></a>
     </div>
     <div class="mt-4 pl-4 overflow-hidden">
       <button type="button" class="btn btn-wauto-solid btn-new"><i class="material-icons-round mr-1">add_circle_outline</i>
@@ -111,7 +112,7 @@
   <div class="page-content">
     <header class="border border-top-0 border-right-0 border-left-0 bg-white">
        <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="#" id="close-sidebar" class="close-sidemenu d-flex justify-content-center align-content-between"><i class="material-icons-round">menu</i></a>
+        <a href="#" id="open-sidebar" class="close-sidemenu d-flex justify-content-center align-content-between"><i class="material-icons-round">menu</i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
