--- a/in-app-extractors-new-session-easy.html
+++ b/in-app-extractors-new-session-easy.html
@@ -36,6 +36,7 @@
   <div class="sidebar-wrapper" id="sidebar">
     <div class="mt-3 pl-4 overflow-hidden">
       <a class="navbar-brand" href="#"><img src="img/logo-wauto-inapp.png" alt=""></a>
+      <a href="#" id="close-sidebar" class="close-sidemenu ml-2"><i class="material-icons-round mr-1">close</i></a>
     </div>
     <div class="mt-4 pl-4 overflow-hidden">
       <button type="button" class="btn btn-wauto-solid btn-new"><i class="material-icons-round mr-1">add_circle_outline</i>
@@ -113,7 +114,7 @@
   <div class="page-content">
     <header class="border border-top-0 border-right-0 border-left-0 bg-white">
        <nav class="navbar navbar-expand-lg navbar-light">
-        <a href="#" id="close-sidebar" class="close-sidemenu d-flex justify-content-center align-content-between"><i class="material-icons-round">menu</i></a><span class="ml-2">Extractors</span>
+        <a href="#" id="open-sidebar" class="close-sidemenu d-flex justify-content-center align-content-between"><i class="material-icons-round">menu</i></a><span class="ml-2">Extractors</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -215,6 +216,7 @@
               <div class="extract-details-head d-flex align-items-center">
                 <i class="icon-extract-title mr-2"></i>
                 <h5 class="text-dark mb-0 mr-2">watchnerd.com</h5>
+                <a href=""><i class="fas fa-pen" aria-hidden="true"></i></a>
               </div>
             </div>
             <div class="col-12 col-md-7 text-left text-md-right">
