--- a/in-app-activate-extractor.html
+++ b/in-app-activate-extractor.html
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -154,7 +154,7 @@
           <div class="col-md-8">
             <div class="align-items-center mb-3">
               <img class="img-brand-extractor mr-2 d-inline-block" src="img/img-activate-sample.png" alt="">
-              <h3 class="color-orange d-inline-block">Creativefabrica.com Extractor</h3>
+              <h3 class="color-orange">Creativefabrica.com Extractor</h3>
             </div>
             <p class="font-size-16">Our pre-built creativefabrica.com scraper tool lets you easily extract data from multiple pages on creativefabrica.com without writing any code in just a few minutes.</p>
             <div class="mt-2">
@@ -313,7 +313,7 @@
         </div>
         <div class="card-content py-3">
           <div class="text-center">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/rXD1DOWW84U" title="YouTube video player" allowfullscreen></iframe>
+            <iframe class="mw-100" width="560" height="315" src="https://www.youtube.com/embed/rXD1DOWW84U" title="YouTube video player" allowfullscreen></iframe>
           </div>
         </div>
         <div class="extract-details-head py-3">
