--- a/in-app-dashboard.html
+++ b/in-app-dashboard.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -154,9 +154,9 @@
           </div>
         </div>
         <div class="col-md-6 col-12 text-left text-md-right mt-3 mt-md-0">
-            <a href="" class="btn bg-white shadow-sm mr-2"><i class="icon-dash-play mr-1"></i>Introduction video</a>
-            <a href="" class="btn bg-white shadow-sm mr-2"><i class="icon-dash-faq mr-1"></i>FAQ's</a>
-            <a href="" class="btn bg-white shadow-sm"><i class="icon-dash-billing mr-1"></i>Billing</a>
+            <a href="" class="btn bg-white shadow-sm mr-2 mb-2"><i class="icon-dash-play mr-1"></i>Introduction video</a>
+            <a href="" class="btn bg-white shadow-sm mr-2 mb-2"><i class="icon-dash-faq mr-1"></i>FAQ's</a>
+            <a href="" class="btn bg-white shadow-sm mb-2"><i class="icon-dash-billing mr-1"></i>Billing</a>
         </div>
       </div>
       <div class="card-deck mb-4">
@@ -245,24 +245,36 @@
                 <tbody>
                 <tr>
                   <td><a href="">Extractor_448</a></td>
-                  <td><div class="text-success"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
+                  <td><div class="text-success d-flex align-items-center"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
                   <td>15</td>
                   <td>May 28, 2021@05:42</td>
-                  <td><a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a></td>
+                  <td>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 d-flex align-items-center rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td><a href="">Extractor_448</a></td>
-                  <td><div class="text-success"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
+                  <td><div class="text-success d-flex align-items-center"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
                   <td>15</td>
                   <td>May 28, 2021@05:42</td>
-                  <td><a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a></td>
+                  <td>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 d-flex align-items-center rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a>
+                    </div>
+                  </td>
                 </tr>
                 <tr>
                   <td><a href="">Extractor_448</a></td>
-                  <td><div class="text-success"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
+                  <td><div class="text-success d-flex align-items-center"><i class="fas fa-check-circle mr-1"></i>Completed</div></td>
                   <td>15</td>
                   <td>May 28, 2021@05:42</td>
-                  <td><a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a></td>
+                  <td>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-wauto-light px-2 py-1 font-size-14 d-flex align-items-center rounded-5"><i class="fas fa-cloud-download-alt mr-1"></i>Download</a>
+                    </div>
+                  </td>
                 </tr>
                 </tbody>
               </table>
@@ -286,24 +298,30 @@
                   <td><a href="">my -task-8-schedule</a></td>
                   <td>May 28, 2021@05:42</td>
                   <td>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    </div>
                   </td>
                 </tr>
                 <tr>
                   <td><a href="">my -task-8-schedule</a></td>
                   <td>May 28, 2021@05:42</td>
                   <td>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    </div>
                   </td>
                 </tr>
                 <tr>
                   <td><a href="">my -task-8-schedule</a></td>
                   <td>May 28, 2021@05:42</td>
                   <td>
-                    <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
-                    <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <div class="d-flex">
+                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1"></i>Edit</a>
+                      <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    </div>
                   </td>
                 </tr>
                 </tbody>
