--- a/in-app-integrate.html
+++ b/in-app-integrate.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
