--- a/in-app-start.html
+++ b/in-app-start.html
@@ -120,7 +120,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -140,15 +140,15 @@
     <!-- In App Body -->
     <section class="container-fluid">
       <div class="row">
-        <div class="col-md-9 col-12">
+        <div class="col-lg-9 col-12">
           <div class="body-content-empty text-center">
             <img src="img/img-inapp-start-empty.png" alt="">
             <p class="mt-3 font-size-16">You dont have any extractors created, please click below to create your first extractor.</p>
             <a href="#" class="btn btn-wauto-blue text-white mt-2">Create Extractor</a>
           </div>
         </div>
-        <div class="col-md-3 col-12 ">
-          <div class="card card-completeprofile border-0 shadow-sm mt-5 mb-3 ">
+        <div class="col-lg-3 col-12 ">
+          <div class="card card-completeprofile border-0 shadow-sm mb-3 ">
             <img class="card-img-top" src="img/img-inapp-completeprofile.png" alt="Card image">
             <div class="card-body">
               <p class="card-title text-dark">Follow these steps to get you up and running:</p>
