--- a/input-starter-links-&-run.html
+++ b/input-starter-links-&-run.html
@@ -38,22 +38,22 @@
           <div class="tabs-extractor mt-4 wizard-nav">
             <ul class="nav nav-tabs justify-content-center">
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
+                <a class="checked nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
               </li>
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
+                <a class="checked nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
               </li>
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
+                <a class="checked nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
               </li>
               <li class="nav-item">
-                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
+                <a class="active nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
               </li>
             </ul>
           </div>
@@ -78,12 +78,6 @@
                         <a href="" class="d-block">https:// amazon.com/gp/category/bicycle</a>
                     </div>
                     <a href="" class="btn btn-wauto-solid rounded-5 font-size-14 mb-4 mt-4"><span class="material-icons-round font-size-20 mr-1">play_arrow</span>Run Now</a>
-
-                    <div class="col-3 custom-control custom-switch">
-                        <input type="checkbox" checked class="custom-control-input" id="customSwitch1">
-                        <label class="custom-control-label font-size-14" for="customSwitch1">Email me when this run finishes.</label>
-                    </div>
-
 
                 </div>
             </div>
