--- a/update-your-plan.html
+++ b/update-your-plan.html
@@ -36,9 +36,9 @@
         <div class="col-12 col-md-11">
           <h3 class="color-orange font-weight-bold text-center mb-5">Update your plan</h3>
 
-          <div class="d-flex">
-            <h4 class="font-weight-bold">Prices and Plans</h4>
-            <div class="custom-control custom-switch">
+          <div class="d-flex flex-wrap">
+            <h4 class="font-weight-bold mr-4 pr-3">Prices and Plans</h4>
+            <div class="custom-control custom-switch pl-0">
                 <label class="mr-4 color-blue" for="customSwitch1">Monthly</label>
                 <input type="checkbox" checked="" class="custom-control-input position-relative" id="customSwitch1">
                 <label class="custom-control-label ml-1" for="customSwitch1"></label>
