--- a/PDE.html
+++ b/PDE.html
@@ -71,7 +71,7 @@
     </div>
   </header>
   <!-- Fold Area -->
-  <section class="container-fluid pde-searcharea">
+  <section class="container-fluid pde-searcharea mb-4 mt-4">
     <div class="container text-center">
       <h1 class="fold-text-hero">WebAutomation Extractor Marketplace</h1>
       <p class="fold-subtext mt-2 mb-5">Find ready-made Web Scrapers and extract data from any website with just a few clicks, no coding necessary.</p>
@@ -86,7 +86,7 @@
   <!-- PDE Categories -->
   <section class="container-fluid pde-categories">
     <div class="container">
-      <div class="row mb-4">
+      <div class="row pb-4 pt-4">
         <div class="col-md-6 col-sm-12">
           <h4 class="font-weight-bold">520 Pre - Defined Extractors (PDEs)</h4>
         </div>
@@ -102,7 +102,7 @@
           </div>
         </div>
       </div>
-      <div class="row">
+      <div class="row mt-4 mb-4">
         <div class="col-md-3">
             <div class="form-group d-block d-sm-none">
               <label for="sel1" class="sr-only">Categories</label>
@@ -458,9 +458,11 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="container-fluid wauto-footer">
+  <footer class="container-fluid wauto-footer mt-4 pb-2 pt-3">
     <div class="container">
       <div class="row">
+        <div class="col-md-1">
+        </div>
         <div class="col-md-4">
           <img src="img\webauto-logo-02.png" alt="" class="mb-3">
           <p class="mb-3 mr-4">Getting started with web scraping today by creating an account!</p>
@@ -478,7 +480,7 @@
             <li>
               <ul>
         </div>
-        <div class="col-md-4 foot-menu">
+        <div class="col-md-3 foot-menu">
           <h5 class="font-weight-bold">Recources</h5>
           <ul class="list-unstyled mt-3">
             <li class="mb-2"><a href="#">Help Centre</a></li>
@@ -491,10 +493,12 @@
             <li>
             <li class="mb-2"><a href="#">Developers</a>
             <li>
-              <ul>
+          <ul>
         </div>
       </div>
       <div class="row mt-5">
+        <div class="col-md-1">
+        </div>
         <div class="col-md-4">
           <span>&copy; Copyrights 2020. All rights reserved.</span>
         </div>
@@ -505,7 +509,7 @@
           -
           <a href="" title="Web automation privacy policy">Privacy Policy</a>
         </div>
-        <div class="col-md-4 foot-made">
+        <div class="col-md-3 foot-made">
           <p>Made with <i class="fas fa-heart"></i> in London</p>
         </div>
       </div>
