--- a/activate.html
+++ b/activate.html
@@ -38,22 +38,22 @@
           <div class="tabs-extractor mt-4 wizard-nav">
             <ul class="nav nav-tabs justify-content-center">
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
+                <a class="checked nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
               </li>
               <li class="nav-item">
-                <a class="checked nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
+                <a class="checked nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
               </li>
               <li class="nav-item">
-                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
+                <a class="active nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
               </li>
             </ul>
           </div>
@@ -66,7 +66,7 @@
                          <div class="card-body">
                               <div class="align-items-center mb-3">
                                 <img class="img-brand-extractor mr-2 d-inline-block" src="img/img-activate-sample.png" alt="">
-                                <h3 class="color-orange d-inline-block">Creativefabrica.com Extractor</h3>
+                                <h3 class="color-orange">Creativefabrica.com Extractor</h3>
                               </div>
                               <p class="font-size-16">Our pre-built creativefabrica.com scraper tool lets you easily extract data from multiple pages on creativefabrica.com without writing any code in just a few minutes.</p>
                            <div class="mt-2">
@@ -218,7 +218,7 @@
                           </div>
                           <div class="card-content py-3">
                             <div class="text-center">
-                              <iframe width="560" height="315" src="https://www.youtube.com/embed/rXD1DOWW84U" title="YouTube video player" allowfullscreen></iframe>
+                              <iframe class="mw-100" width="560" height="315" src="https://www.youtube.com/embed/rXD1DOWW84U" title="YouTube video player" allowfullscreen></iframe>
                             </div>
                           </div>
                           <div class="extract-details-head py-3">
