--- a/in-app-extractors-empty.html
+++ b/in-app-extractors-empty.html
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -147,7 +147,7 @@
     <!-- In App Body -->
     <div class="inner-sidebar">
       <div class="inner-side-head text-center">
-        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 btn-new btn-blue-gradient"><i class="material-icons-round mr-1">add</i>New Project</button>
+        <button type="button" class="btn btn-wauto-blue pt-2 p-2 pl-5 pr-5 d-flex align-items-center text-nowrap btn-new"><i class="material-icons-round mr-1">add</i>New Project</button>
       </div>
       <div class="inner-side-search">
         <div class="input-group">
