--- a/in-app-extractors-new-session-easy.html
+++ b/in-app-extractors-new-session-easy.html
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -145,75 +145,87 @@
       </nav>
     </header>
     <!-- In App Body -->
-    <div class="inner-sidebar">
-      <div class="inner-side-head">
-        <h6 class="d-inline-block mt-2">All Extractors</h6>
-        <div class="dropdown float-right">
-          <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
-          <div class="dropdown-menu font-size-14">
-            <a class="dropdown-item" href="#">Newest</a>
-            <a class="dropdown-item" href="#">Oldest</a>
-            <a class="dropdown-item" href="#">Most Popular</a>
-            <a class="dropdown-item" href="#">Less Popular</a>
+    <div class="sidebar-reverse">
+      <div class="inner-sidebar">
+        <div class="inner-side-head">
+          <h6 class="d-inline-block mt-2">All Extractors</h6>
+          <div class="dropdown float-right">
+            <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
+            <div class="dropdown-menu font-size-14">
+              <a class="dropdown-item" href="#">Newest</a>
+              <a class="dropdown-item" href="#">Oldest</a>
+              <a class="dropdown-item" href="#">Most Popular</a>
+              <a class="dropdown-item" href="#">Less Popular</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="inner-side-search">
-        <div class="input-group">
-          <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
-          <div class="input-group-append">
-            <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+        <div class="inner-side-search">
+          <div class="input-group">
+            <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
+            <div class="input-group-append">
+              <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+            </div>
           </div>
         </div>
+        <div class="inner-side-list mt-2">
+          <div class="inner-side-search">
+            <div class="dropdown">
+              <button type="button" class="btn dropdown-toggle w-100 text-left text-dark bg-white font-size-14 border" data-toggle="dropdown" aria-expanded="true">All Extractors</button>
+              <div class="dropdown-menu font-size-14 w-100 listed-bottom" x-placement="bottom-start">
+                <ul class="list-unstyled font-size-14">
+                  <li><a href=""><span class="badge mr-2">438</span>creativefabrica.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>watchnerd.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>hepsiburada.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>wikipedia.org</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>creativefabrica.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>watchnerd.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>hepsiburada.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>wikipedia.org</a></li>
+                  <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+     
+        </div>
+        <div class="mt-3 mb-4 wauto-pagination">
+          <ul class="pagination pagination-sm justify-content-center">
+            <li class="page-item disabled">
+              <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+                <span class="sr-only">Previous</span>
+              </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item active" aria-current="page">
+              <a class="page-link" href="#">2</a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+              <a class="page-link" href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+                <span class="sr-only">Next</span>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="inner-side-list mt-2">
-        <ul class="list-unstyled font-size-14">
-          <li><a href=""><span class="badge mr-2">438</span>creativefabrica.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>watchnerd.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>hepsiburada.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>wikipedia.org</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>creativefabrica.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>watchnerd.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>hepsiburada.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>wikipedia.org</a></li>
-          <li><a href=""><span class="badge mr-2">438</span>amazon.com</a></li>
-        </ul>
-      </div>
-      <div class="mt-3 wauto-pagination">
-        <ul class="pagination pagination-sm justify-content-center">
-          <li class="page-item disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item active" aria-current="page">
-            <a class="page-link" href="#">2</a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
+      <div class="beside-inner-sidebar breadcrumb-wrap">
+        <ul class="breadcrumb bg-transparent font-size-14 pl-0 mt-3 mb-3">
+          <li class="breadcrumb-item"><a href="#">Extractors</a></li>
+          <li class="breadcrumb-item active">Projects</li>
         </ul>
       </div>
     </div>
     <section class="container-fluid beside-inner-sidebar">
-      <ul class="breadcrumb bg-transparent font-size-14 pl-0">
-        <li class="breadcrumb-item"><a href="#">Extractors</a></li>
-        <li class="breadcrumb-item active">Projects</li>
-      </ul>
       <div class="card bg-white shadow-sm border-0 mb-3 ">
         <div class="card-body">
           <div class="row">
             <div class="col-12 col-md-5 d-flex align-items-center">
-              <div class="extract-details-head d-flex align-items-center">
+              <div class="extract-details-head d-flex align-items-center mb-3">
                 <i class="icon-extract-title mr-2"></i>
                 <h5 class="text-dark mb-0 mr-2">watchnerd.com</h5>
                 <a href=""><i class="fas fa-pen" aria-hidden="true"></i></a>
@@ -221,7 +233,7 @@
             </div>
             <div class="col-12 col-md-7 text-left text-md-right">
               <div class="">
-                <div class="custom-control custom-switch font-size-14">
+                <div class="custom-control custom-switch font-size-14 d-flex justify-content-end">
                   <label class="mr-4 font-weight-bold" for="in_app_extractors_new_session">Easy Mode</label>
                   <input type="checkbox" class="custom-control-input position-relative" id="in_app_extractors_new_session">
                   <label class="custom-control-label ml-1" for="in_app_extractors_new_session"></label>
