--- a/in-app-tasks-concierge-prices.html
+++ b/in-app-tasks-concierge-prices.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -162,7 +162,7 @@
               <h3 class="color-blue mb-4">Get started by entering a URL to get data from...</h3>
 
               <div class="row justify-content-center mb-4">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-3">
                   <div class="card card-body h-100 border-0 shadow-sm">
                     <h5 class="mb-3">Standard</h5>
                     <ul class="ml-auto mr-auto mb-5 text-left">
@@ -171,7 +171,7 @@
                     <h6 class="color-orange mt-auto mb-0">From $20</h6>
                   </div>
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 mb-3">
                 <div class="card card-body h-100 border-0 shadow-sm">
                   <h5 class="mb-3 color-orange">Log In</h5>
                     <ul class="ml-auto mr-auto mb-5 text-left">
