--- a/in-app-tasks-concierge.html
+++ b/in-app-tasks-concierge.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -147,7 +147,7 @@
     <section class="container-fluid">
 
       <div class="row">
-        <div class="col-12 col-md-11">
+        <div class="col-12 col-md-12">
           <div class="card-deck">
             <div class="card border-0 shadow-sm mt-4 mb-4">
               <div class="card-body">
