--- a/in-app-tasks.html
+++ b/in-app-tasks.html
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"><i class="img-profile-avatar mr-1"></i>Victor</a>
+              <a class="nav-link dropdown-toggle text-center" href="#" data-toggle="dropdown"><i class="fas fa-user mr-1"></i>Victor</a>
               <div class="dropdown-menu">
                 <a class="dropdown-item" href="#">My Profile</a>
                 <a class="dropdown-item" href="#">Billing</a>
@@ -147,25 +147,27 @@
     <section class="container-fluid">
 
           <div class="row">
-            <div class="col-12 col-md-11">
+            <div class="col-12 col-md-12">
               <div class="clearfix">
-                <form action="" class="float-none form-inline mt-5">
-                  <p class="mr-auto mb-0">1 result(s).</p>
-                  <div class="inner-side-search">
-                    <div class="input-group">
-                      <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
-                      <div class="input-group-append">
-                        <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+                <form action="" class="float-none form-inline">
+                  <p class="mb-0">1 result(s).</p>
+                  <div class="ml-auto d-flex align-items-center">
+                    <div class="inner-side-search pl-0">
+                      <div class="input-group">
+                        <input type="text" class="form-control border-right-0 border" placeholder="Search projects..." id="pdesearch" name="pdesearch">
+                        <div class="input-group-append">
+                          <span class="input-group-text bg-white border-left-0"><i class="fas fa-search"></i></span>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="dropdown">
-                    <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
-                    <div class="dropdown-menu font-size-14">
-                      <a class="dropdown-item" href="#">Newest</a>
-                      <a class="dropdown-item" href="#">Oldest</a>
-                      <a class="dropdown-item" href="#">Most Popular</a>
-                      <a class="dropdown-item" href="#">Less Popular</a>
+                    <div class="dropdown">
+                      <button type="button" class="btn dropdown-toggle text-dark bg-white font-size-14 border" data-toggle="dropdown"><i class="fas fa-sort-amount-down mr-1"></i>Sort</button>
+                      <div class="dropdown-menu font-size-14">
+                        <a class="dropdown-item" href="#">Newest</a>
+                        <a class="dropdown-item" href="#">Oldest</a>
+                        <a class="dropdown-item" href="#">Most Popular</a>
+                        <a class="dropdown-item" href="#">Less Popular</a>
+                      </div>
                     </div>
                   </div>
                 </form>
@@ -189,12 +191,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td class="text-left"><div class="text-warning d-flex align-items-center"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -202,12 +206,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td class="text-left"><div class="text-warning d-flex align-items-center"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -215,12 +221,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
+                    <td class="text-left"><div class="text-success d-flex align-items-center"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -228,12 +236,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td class="text-left"><div class="text-warning d-flex align-items-center"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -241,12 +251,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-danger"><i class="fas fa-times-circle mr-1" aria-hidden="true"></i>Failed</div></td>
+                    <td class="text-left"><div class="text-danger d-flex align-items-center"><i class="fas fa-times-circle mr-1" aria-hidden="true"></i>Failed</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -254,12 +266,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-success"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
+                    <td class="text-left"><div class="text-success d-flex align-items-center"><i class="fas fa-check-circle mr-1" aria-hidden="true"></i>Completed</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   <tr>
@@ -267,12 +281,14 @@
                     <td>Every 6 months</td>
                     <td>124 days, 22:23:01</td>
                     <td>7 times</td>
-                    <td class="text-left"><div class="text-warning"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
+                    <td class="text-left"><div class="text-warning d-flex align-items-center"><i class="fas fa-minus-circle mr-1" aria-hidden="true"></i>ABORTED</div></td>
                     <td>2hours</td>
                     <td class="text-left">
-                      <a href="" class="btn btn-outline-secondary px-2 py-1 font-size-14 rounded-5">Details</a>
-                      <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
-                      <a href="" class="btn btn-sm btn-danger px-2 py-1 rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      <div class="d-flex">
+                        <a href="" class="btn btn-outline-secondary px-2 py-1 d-flex align-items-center font-size-14 rounded-5">Details</a>
+                        <a href="" class="btn btn-sm btn-wauto-blue px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-pen mr-1" aria-hidden="true"></i>Edit</a>
+                        <a href="" class="btn btn-sm btn-danger px-2 py-1 ml-2 d-flex align-items-center rounded-5"><i class="fas fa-trash-alt mr-1" aria-hidden="true"></i>Delete</a>
+                      </div>
                     </td>
                   </tr>
                   </tbody>
