--- a/integrations.html
+++ b/integrations.html
@@ -73,7 +73,7 @@
   <!-- Integrations -->
   <section class="container-fluid pde-categories">
     <div class="container">
-      <div class="shadow-sm text-center banner-integrations">
+      <div class="shadow-sm text-center banner-integrations mt-4 p-2">
           <h2 class="text-dark">Integrations</h1>
       </div>
       <div class="row mt-5">
@@ -113,7 +113,7 @@
         <div class="col-md-9">
           <div class="row same-height">
             <div class="col-md-4 mb-4">
-              <div class="card card-pde border-0 shadow-sm">
+              <div class="card card-pde border-1 shadow-sm">
                 <div class="card-body">
                   <img src="img/img-rest-api.png" alt="" class="img-fluid mb-3">
                   <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -122,7 +122,7 @@
               </div>
             </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-mysql.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -131,7 +131,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-ftp.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -140,7 +140,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-zapier.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -149,7 +149,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-dropbox.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -158,7 +158,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-webhooks.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -167,7 +167,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-shopify.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -176,7 +176,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-tableau.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -185,7 +185,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-               <div class="card card-pde border-0 shadow-sm">
+               <div class="card card-pde border-1 shadow-sm">
                  <div class="card-body">
                    <img src="img/img-google-sheets.png" alt="" class="img-fluid mb-3">
                    <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -194,7 +194,7 @@
                </div>
              </div>
              <div class="col-md-4 mb-4">
-              <div class="card card-pde border-0 shadow-sm">
+              <div class="card card-pde border-1 shadow-sm">
                 <div class="card-body">
                   <img src="img/img-google-sheets.png" alt="" class="img-fluid mb-3">
                   <p class="card-text">Zapier is a tool that lets you connect 1,500+ apps and automatically move data between them</p>
@@ -223,9 +223,11 @@
     </div>
   </section>
   <!-- Footer -->
-  <footer class="container-fluid wauto-footer">
+  <footer class="container-fluid wauto-footer mt-4 pb-2 pt-3">
     <div class="container">
       <div class="row">
+        <div class="col-md-1">
+        </div>
         <div class="col-md-4">
           <img src="img\webauto-logo-02.png" alt="" class="mb-3">
           <p class="mb-3 mr-4">Getting started with web scraping today by creating an account!</p>
@@ -243,7 +245,7 @@
             <li>
               <ul>
         </div>
-        <div class="col-md-4 foot-menu">
+        <div class="col-md-3 foot-menu">
           <h5 class="font-weight-bold">Recources</h5>
           <ul class="list-unstyled mt-3">
             <li class="mb-2"><a href="#">Help Centre</a></li>
@@ -256,10 +258,12 @@
             <li>
             <li class="mb-2"><a href="#">Developers</a>
             <li>
-              <ul>
+          <ul>
         </div>
       </div>
       <div class="row mt-5">
+        <div class="col-md-1">
+        </div>
         <div class="col-md-4">
           <span>&copy; Copyrights 2020. All rights reserved.</span>
         </div>
@@ -270,7 +274,7 @@
           -
           <a href="" title="Web automation privacy policy">Privacy Policy</a>
         </div>
-        <div class="col-md-4 foot-made">
+        <div class="col-md-3 foot-made">
           <p>Made with <i class="fas fa-heart"></i> in London</p>
         </div>
       </div>
