--- a/introduction.html
+++ b/introduction.html
@@ -38,22 +38,22 @@
           <div class="tabs-extractor mt-4 wizard-nav">
             <ul class="nav nav-tabs justify-content-center">
               <li class="nav-item">
-                <a class="active nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
+                <a class="active nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./introduction.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>1.</span>INTRODUCTION</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./select-PDE.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>2.</span>SELECT PDE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./activate.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>3.</span>ACTIVATE</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./input-starter-links-&-run.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>4.</span>INPUT STARTER LINKS & RUN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./download.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>5.</span>DOWNLOAD</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-uppercase bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
+                <a class="nav-link text-uppercase text-nowrap bg-transparent pl-0 pr-0 ml-3 mr-3" href="./get-help.html"><i class="fas fa-check mr-1 text-success font-size-16"></i> <span>6.</span>GET HELP</a>
               </li>
             </ul>
           </div>
