--- a/onboarding-freetrial.html
+++ b/onboarding-freetrial.html
@@ -31,9 +31,9 @@
   <!-- Onboarding - Login -->
   <section class="container-fluid">
       <div class="row">
-        <div class="col-md-4 bg-onboarding vh-100 d-none d-md-flex flex-wrap align-content-center">
+        <div class="col-md-4 bg-onboarding vh-100 d-none d-md-flex flex-wrap overflow-auto">
            <div class="w-75 mx-auto">
-             <h1 class="color-blue">Start your 14 day free trial today !</h1>
+             <h1 class="color-blue mt-4">Start your 14 day free trial today !</h1>
              <h6 class="mt-3">No credit card required</h6>
              <h4 class="mt-4">What you get from your free trial:</h4>
              <ul class="list-unstyled list-freetrial-features">
